Link directly to oracle lambda

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -117,10 +117,8 @@ subsequent bytes using the associated proto definition. Repeat this process unti
 entire file.
 
 Alternatively you can adapt
-[this sample oracle observer repo](https://github.com/dewi-alliance/oracle-observer-sample) for your
-use-case.
-
-<!--TODO: list the specific protos used for each file type  -->
+[this sample oracle observer repo](https://github.com/dewi-alliance/oracle-observer-sample/tree/main/oracle-ingestor-lambda)
+for your use-case.
 
 ## Service Providers
 
