--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -50,7 +50,7 @@ The mint IDs are as follows:
 Helium wallets use the same ED25519 curve as Solana wallets, resulting in Helium public keys and
 secret keys mapping directly to Solana wallets.
 
-You can either migrate you wallet using this widget:
+You can either migrate your wallet using this widget:
 
 import { MigrateWallet } from '@theme/MigrateWallet'
 
