gateway-rs migration guide for makers
Co-Authored-By: Jeremy Cooper <25463150+ke6jjj@users.noreply.github.com>

--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -1,9 +1,9 @@
 ---
 id: maker
 title: Maker App 2.0 Upgrade Guide
-pagination_label: Maker Migration
-sidebar_label: Maker Migration
-description: Helium Maker Migration Documentation
+pagination_label: Hotspot Maker App
+sidebar_label: Hotspot Maker App
+description: Helium Hotspot Maker App Migration Docs
 image: https://docs.helium.com/img/link-image.png
 slug: /solana/migration/maker
 ---
