Starting to rework token pages.

--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -1,6 +1,6 @@
 ---
 id: mobile-token
-title: The Helium MOBILE Network Token
+title: Helium MOBILE Network Token
 pagination_label: MOBILE Token
 sidebar_label: MOBILE Token
 description: Helium MOBILE Network Token Documentation
