--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -1,6 +1,6 @@
 ---
 id: iot-token
-title: The Helium IOT Network Token
+title: Helium IOT Network Token
 pagination_label: IOT Token
 sidebar_label: IOT Token
 description: Helium IOT Network Token Documentation
@@ -10,23 +10,53 @@ slug: /helium-tokens/iot
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The IOT Token is the native cryptocurrency and protocol token of the LoRaWAN Hotspots. Its symbol is
-`IOT`. At the time of launch on the Solana Blockchain, symbolizing the end of the migration to
-Solana, there will be a premine of `IOT`. All current LoRaWAN hotspots, that are active on the
-network, and not on the denylist, will be rewarded as part of the IOT premine. You do not have to do
-anything to recieve the premine. Have your hotspot on and Helium Wallet App migrated!
+<img className="docsheader" src={useBaseUrl('/img/blockchain/iot_header.png')} />
 
-There is no IOT currently in circulation.
+IOT is the protocol token of the [Helium IoT Network](/lorawan-on-helium). IOT was introduced to the
+Helium Network with the community proposal
+[HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md) and is further defined in
+subsequent HIPs[^1] [^2] [^3] [^4].
 
-## IOT Treasury
+The IOT token is mined by LoRaWAN Hotspots through both data transfer as well as Proof of Coverage.
 
-The IOT Treasury will be created upon the completed migration to the Solana blockchain. The Treasury
-is funded by activity within epochs. It is your right as a Token Holder to redeem IOT for HNT. This
-redemption will be determined by a redemption ratio that is set algorithmically by the Treasury swap
-contacts. This function is built into the structure of the subDAOs but other Market Makers may also
-support this function.
+[^1]:
+    [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
 
-## Staking IOT
+[^2]:
+    [HIP-76: Linear Lockup Curve](https://github.com/helium/HIP/blob/main/0076-linear-lockup-curve.md)
 
-You can stake your IOT for a vote escrowed (veIOT) position in the subDAO that provides you
-governance and voting power.
+[^3]: [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
+[^4]:
+    [HIP-80: Simplifying DAO Utility Score](https://github.com/helium/HIP/blob/main/0080-simplifying-dao-utility-score.md)
+
+The first IOT tokens were minted following the Solana migration on April 18, 2023.  
+The mint address for IOT is
+[`iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns`](https://explorer.solana.com/address/iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns)
+
+## Treasury
+
+The Treasury is funded by activity within epochs. It is your right as a Token Holder to redeem IOT
+for HNT. This redemption will be determined by a redemption ratio that is set algorithmically by the
+Treasury swap contacts. This function is built into the structure of the subDAOs but other Market
+Makers may also support this function.
+
+## Token Allocation
+
+IOT follows a similar minting schedule to HNT, however at a max supply of 200,000,000,000 (200B).
+
+The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
+
+The emission schedule is as follows:
+
+| Year | IOT at the start of the year | IOT minted | % to Proof of Coverage (+ any extra from Data Transfer) | % to Data Transfer (excess to Proof of Coverage) | % to Oracles | Operations Fund | veHNT Stakers |
+| ---- | ---------------------------- | ---------- | ------------------------------------------------------- | ------------------------------------------------ | ------------ | --------------- | ------------- |
+| 1    | 5B                           | 65B        | 30%                                                     | 50%                                              | 7%           | 7%              | 6%            |
+| 2    | 70B                          | 32.5B      | 28.5%                                                   | 51.5%                                            | 7%           | 7%              | 6%            |
+| 3    | 102.5B                       | 32.5B      | 27%                                                     | 53%                                              | 7%           | 7%              | 6%            |
+| 4    | 135B                         | 16.25B     | 25.5%                                                   | 54.5%                                            | 7%           | 7%              | 6%            |
+| 5    | 151.25B                      | 16.25B     | 24%                                                     | 56%                                              | 7%           | 7%              | 6%            |
+| 6    | 167.5B                       | 8.125B     | 22.5%                                                   | 57.5%                                            | 7%           | 7%              | 6%            |
+| 7    | 175.625B                     | 8.125B     | 21%                                                     | 59%                                              | 7%           | 7%              | 6%            |
+
+Full token emissions can be viewed in the IOT section of this document:  
+[Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
