MOBILE header img, mint address.

--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -10,6 +10,11 @@ slug: /helium-tokens/mobile
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
+<img className="docsheader" src={useBaseUrl('/img/blockchain/mobile_header.png')} />
+
+The mint address for MOBILE is
+[`mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6`](https://explorer.solana.com/address/mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6)
+
 :::warning 🚧 This document is a work in progress. 🚧
 
 The documentation on subDAO Tokens and the upcoming Migration is under development and subject to
